# serde-flattened

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
src/: flatten_json_value.rs  lib.rs  serde.rs  test.rs
src/flatten_json_value/: flatten.rs  unflatten.rs
src/nested_csv/: read.rs  write.rs
src/nested_csv/read/: guessed.rs
src/serde/: deserializer.rs  flattened.rs  flattened_map_deserializer.rs  flattened_ref.rs
