[package]
name = "serde-flattened"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A `csv` and `serde_json` extension for flattening nested structures into flat representations. This enables for example serialization/deserialization of nested data to/from CSV."
readme = "README.md"
repository = "https://github.com/Niedzwiedzw/serde-flattened"
homepage = "https://github.com/Niedzwiedzw/serde-flattened"

[dependencies]
csv = "1"
extension-traits = "2"
indexmap = "2.13.0"
itertools = "0"
serde = { version = "1", default-features = false }
serde_json = { version = "1", features = ["preserve_order"] }
tap = "1"
thiserror = "2"
tracing = "0"

[dev-dependencies]
anyhow = "1"
test-log = { version = "0", default-features = false, features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
